finalizacao da pagina principal

--- a/pages/pagina.html
+++ b/pages/pagina.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página inicial</title>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <h1 class="titulo-cabecalho">Boas vindas!</h1>
+        <button class="botao-logout">Logout</button>
+    </header>
+    <main class="conteudo-principal">
+        <h1 class="titulo-principal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, quidem.</h1>
+        <p class="paragrafo-principal">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas quasi, quod modi eveniet iusto dolor. Dolorem tempora odio vel iste dolores, harum, voluptatibus praesentium soluta voluptatum cum quia expedita obcaecati doloribus veniam maiores quae facere accusantium modi ipsa sint rerum.</p>
+ 
+        <h2 class="titulo-secundario">Lorem Ipsum Dolor</h2>
+        <p class="paragrafo-secundario">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet accumsan tortor. Nullam vehicula euismod lectus, a hendrerit elit bibendum a. Fusce vitae erat et lacus convallis elementum.</p>
+ 
+        <h3 class="titulo-terciario">Consectetur Adipisicing Elit</h3>
+        <p class="paragrafo-terciario">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in dictum arcu. Curabitur ut elit nec neque dignissim commodo.</p>
+    </main>
+    <footer class="rodape">
+        <p>&copy; 2024 FIAP. Todos os direitos reservados.</p>
+        <p>
+            <a href="#">Sobre</a>
+            <a href="#">Contato</a>
+            <a href="#">Política de Privacidade</a>
+        </p>
+    </footer>
+    <script src="../js/login.js"></script>
+    <script src="../js/login-sucesso.js"></script>
 </body>
 </html>
